# ai-financial-analyst

./: .gitignore  .pre-commit-config.yaml  ARCH.md  Makefile  PLAN.md  PRODUCT_BRIEF.md  README.md  RULES-INDEX.md  TODO.md  docker-compose.yml  env.example  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  Dockerfile.dev  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: admin.py  advanced_features.py  exports.py  health.py  upload.py
apps/api/app/core/: config.py  database.py  feature_flags.py  observability.py  security.py
apps/api/app/models/: __init__.py  alert.py  artifact.py  audit_log.py  document.py  fact.py  organization.py  query.py  transcript.py  user.py  vector_index.py
apps/api/app/schemas/: exports.py  processing.py  upload.py
apps/api/app/services/: alt_data_pack.py  chunking.py  counterfactual_explainer.py  embedding.py  evaluation.py  exports.py  footnote_time_machine.py  guidance_tracker.py  load_testing.py  market_data.py  normalization.py  parquet_lake.py  portfolio_api.py  retrieval.py  scaling.py  telemetry.py  upload.py
apps/api/app/services/analytics/: risk.py
apps/api/app/services/processors/: __init__.py  audio_processor.py  pdf_processor.py  xbrl_processor.py
apps/api/app/services/valuation/: __init__.py  comps.py  dcf.py
apps/api/app/tasks/: ingestion.py  processing.py
apps/api/tests/: test_main.py
apps/web/: Dockerfile  next.config.js  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/board/: page.tsx
infra/: init-db.sql
